--- a/Java_Spring/src/main/resources/application.properties
+++ b/Java_Spring/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+
+# App Properties
+bookstore.app.jwtSecret= jkdASADS@#@$@#$&&^%13ks
+bookstore.app.jwtExpirationMs= 3600000
