--- a/Java_Spring/src/main/resources/application.properties
+++ b/Java_Spring/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 
 # App Properties
-bookstore.app.jwtSecret= jkdASADS@#@$@#$&&^%13ks
-bookstore.app.jwtExpirationMs= 3600000
+town.app.jwtSecret= khsdvfhskjvskjKUBIKcjhvdasjcvjshvcdjh#@$#@
+town.app.jwtExpirationMs= 3600000
